Set correct file mode when saving changes (#402363)

src/komparemodellist.cpp (KompareModelList::saveDestination): Get
permissions of existing file and copy temporary file with the same
permissions.

Patch by Terry Barnaby.

BUG: 402363
FIXED-IN: 21.07.90